css/standard.css
/* ... */
.usermenu {
  position:absolute;
  top:10em;
  left:3em;
  margin:1em;
  margin-top:0em;
  margin-left:0em;

  width: 12em;

  border:    2px solid gray;

  padding:0.3em;

  background-color: #eee;
}

.notes {
  position:absolute;
  top:27em;
  left:0;
  margin:1em;
  margin-top:0em;
  margin-left:3em;

  width: 12em;

  border:    2px solid gray;

  padding:0.3em;

  background-color: #efefef;

  height:10em;
  overflow: auto;
  z-index:50;
}

.user { margin-left:25%;margin-right:5%; }

div.user ul {
  list-style:none;
}

div.user ul li {
  position: relative;
  padding:3px;
  margin: 0px;
  width: 80%;
  min-height: 1.2em;
  border-left: 2px solid #babdb6 ;
  border-right: 2px solid #babdb6 ;
  border-bottom: 2px solid #babdb6 ;
}

div.user ul li:first-child {
  border-top: 2px solid #babdb6 ;
}
.gamessession {
    display:none;
}

.user .gameid {
    float: left;
    width: 5em;
}
.user .turn {
    padding-left: 1em;
    width: 20em;
}

.user .gameshidesession {
  display: none;
}

.user .gameshidesession , .user .gamesshowsession {
    float:right;
    width: 10em;
}

.wide { margin-left:5%;margin-right:5%; }

.over {
  text-align:center;
  margin-bottom:0.1em;
}

.cardinput {
  display:inline;
  position:relative;
  border: 1px solid #000;
}
.cardinput img { width: 4em;}
.cardinput:hover{ background-color:red;}

.gamestatuspre {
  padding: 0 0.3em;
  background-color: #f57900;
}
.gamestatusover {
  padding:0 0.3em;
  background-color: #e9b96e ;
  color: #fff;
}
.gamestatusplay {
  padding:0 0.3em;
  background-color: #8ae234;
}

.bigger{ font-size:larger;}


/* statistics using jquery*/
caption {
  text-align: center;
  margin: 0.5em;
  padding: 0.5em;
  padding-bottom: 0em;
  margin-bottom: 0;
 }

table.stats {
  margin: 0.5em 1em;
  border: solid 0.2em #aeaeae;
  -moz-border-radius: 0.5em ;
  float: left;
}
table.stats tbody tr.odd td  { background-color:#aeaeae; }
table.stats tbody tr.even td { background-color:#eaeaea; }
table.stats td, table.stats th {
  margin-left:  0.2em;
  margin-right: 0.2em;
  padding-left:  0.2em;
  padding-right: 0.2em;
  border-right: solid 0.1em #000;
}
table.stats tr td:last-child, table.stats  tr th:last-child { border-right: solid 0 #000; }
table.stats th { border-bottom: solid 0.2em #000 }

table.stats thead tr .header {
    background-image: url(bg.png);
    background-repeat: no-repeat;
    background-position: center right;
    cursor: pointer;
}
table.stats tbody td {
    padding: 4px;
    background-color: #eaeaea;
    vertical-align: top;
}
table.stats thead tr .headerSortUp {
    background-image: url(asc.png);
}
table.stats thead tr .headerSortDown {
    background-image: url(desc.png);
}
table.stats thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
    background-color: #8dbdd8;
}



/* the login window */
.login {
  text-align:center;
  padding-top: 1em;
}

.login p {
  padding: 0.1em 0.1em 0.15em;
}
.login h4 {
  padding: 0.3em 0.3em 0.45em;
}

/* the login/register form */
ul.loginregister {
  width: 24em;
  margin: 0.25em auto;
  margin-top: 1.0em;
  padding: 0.0em;
  padding-top:0.5em;
  text-align: right;
  z-index: 1;
 }

ul.loginregister li {
  display:inline;
  border: 0px;
  border-top: 2px solid #000;
  border-left: 2px solid #000;
  padding: 0.5em 0.75em;
  padding-bottom: 0.25em;
  background-color: #eee;
}

ul.loginregister li:last-child { border-right: 2px solid #000;}
ul.loginregister li:hover {background-color: #aaa; }

.doregister {display: none;}
.dologin label,.doregister label {float:left; width: 6em; }


.login fieldset{
  width: 24em;
  margin: 0.0em auto;
  margin-bottom: 0.5em;
  padding: 0.5em 0.5em  1.5em;
  text-align: center;
}

fieldset {
  border: 2px solid #000;
  padding: 0.5em 0.5em 0.75em;
  background-color: #eee;
}

fieldset p {
  font-size:smaller;
}

.login label, .login input{ margin: 0.5em 0.5em 0.75em;}

.login label{
  float:left;
  width:7em;
  text-align: left;
}

.login input #email, .login input #password{
  width:9em;
  float:right;
}

.login .submitbutton { background-color: #fff;}
.login .submitbutton:hover { background-color: #aaa;}

#openid_url {
  background: #FFFFFF url('openid-icon-small.gif') no-repeat scroll 0pt 50%;
  padding-left: 18px;
}

table.openid td, table.openid th{
    padding: 0.0em 0.3em;;
}

.newbiehint {
    background-color: #fee;
}

.vacation {
    color: #666;
    background-color: #fc3;
}

div.table div img.gravatar, img.gravatar  {
    width:  4em;
    height: 4em;
    border: 3px solid #aaa;
    float:left;
}

div img.button {
    float: right;
    width: 2em;
}

div span.numberoftricks {
    text-align:center;
    clear:both;
    display:block;
}

.highcall {
    background-color: #fc3;
}

.about {
    margin-left: 20%;
    margin-right: 20%;
    padding-top: 10%;
}

.about ul {
    margin-left: 2em;
}

.about div {
    width:12em;
    height: 6em;
    margin: 2em;
    padding: 1em;
    float:left;
    border: 1px solid black;
}

.about .code {
    background-color: #729fcf;
}
.about .database {
    background-color: #8ae234;
}
.about .graphics {
    background-color: #e9b96e;
}
.about .translation {
    background-color: #fce94f;
}

